syntax = "proto3";

package interchain_security.ccv.child.v1;

option go_package = "github.com/cosmos/interchain-security/x/ccv/child/types";

import "ibc/lightclients/tendermint/v1/tendermint.proto";
import "ibc/core/channel/v1/channel.proto";
import "gogoproto/gogo.proto";
import "interchain_security/ccv/child/v1/child.proto";

// GenesisState defines the CCV child chain genesis state
message GenesisState {
    Params   params          = 1 [(gogoproto.nullable) = false];
    string parent_channel_id = 2
        [(gogoproto.moretags) = "yaml:\"parent_channel_id\""]; // empty for a completely new chain
    bool new_chain = 3
        [(gogoproto.moretags) = "yaml:\"new_chain\""]; // true for new chain GenesisState, false for chain restart.
    // ParentClientState filled in on new chain, nil on restart.
    ibc.lightclients.tendermint.v1.ClientState parent_client_state = 4
        [(gogoproto.moretags) = "yaml:\"parent_client_state\""];
    // ParentConsensusState filled in on new chain, nil on restart.
    ibc.lightclients.tendermint.v1.ConsensusState parent_consensus_state = 5
        [(gogoproto.moretags) = "yaml:\"parent_consensus_state\""];
    repeated UnbondingSequence unbonding_sequences = 6
        [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"unbonding_sequences\""];
  }
  
  // UnbondingSequence defines the genesis information for each unbonding packet sequence.
  message UnbondingSequence {
    uint64                     sequence         = 1;
    uint64                     unbonding_time   = 2 [(gogoproto.moretags) = "yaml:\"unbonding_time\""];
    ibc.core.channel.v1.Packet unbonding_packet = 3
        [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"unbonding_packet\""];
  }
  
